# AutoHawkAPI-Client

./: .gitignore  LICENSE  README.md  pyproject.toml
bizhawk_hook/: __init__.py  exceptions.py  memory.py
bizhawk_hook/lua_components/: memory.lua
bizhawk_hook/lua_components/lua_modules/lib/luarocks/rocks/: manifest
bizhawk_hook/lua_components/lua_modules/lib/luarocks/rocks/luasocket/2.0.2-6/: luasocket-2.0.2-6.rockspec  rock_manifest
bizhook/: __init__.py  exceptions.py  export.py  memory.py
