[tool.poetry]
name = "bizhawk_hook"
version = "0.1.0"
description = "Communicate with the Bizhawk emulator via a Lua socket"
authors = ["Maximillian Strand <maximillian.strand@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
