[tool.poetry]
name = "bizhook"
version = "1.0.0"
description = "Communicate with the Bizhawk emulator via a Lua socket"
readme = "README.md"
authors = ["Maximillian Strand <maximillian.strand@protonmail.com>"]
homepage = "https://gitlab.com/thedisruptproject/bizhook"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
