[tool.poetry]
name = "autohawkapi"
version = "1.2.1"
description = "Communicate with the Bizhawk emulator via a Lua socket"
readme = "README.md"
authors = ["Michael Hutts <mhutts@udel.edu>", "Maximillian Strand <maximillian.strand@protonmail.com>"]
repository = "https://github.com/SuperBlueHenBros/AutoHawkAPI-Client"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
